# django-spaces-markdown-ckeditor

./: .gitignore  Readme.md  setup.cfg
markdown_ckeditor/: apps.py  ckeditor.py  urls.py  views.py
markdown_ckeditor/static/collab_links/js/: collab_links.js
markdown_ckeditor/static/markdown_ckeditor/: README
markdown_ckeditor/static/markdown_ckeditor/ckeditor/: config.js
markdown_ckeditor/templates/wiki/: edit.html
markdown_ckeditor/templates/wiki/forms/: ckeditor.html
