[metadata]
name = markdown_ckeditor
author = Mattes Sarcander
description = Markdown CKEditor integration for Django Collab platform. Not really usable outside of Collab.
version = 0.1
url = https:///github.com/Fortschritt/django-spaces-markdown-ckeditor
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4